infoElapsedBeats.txt
Overview
http://aubio.org/news has several examples of audio files.
https://github.com/piem/aubio is the development location.


TODO
Evaluate the usefulness of aubio to play a song and show the elapsed beats.



Logs
Thursday 11 September 2014 7:56 AM CST
Trying to get aubio installed on Ubuntu


Thursday 11 September 2014 8:58 AM CST
Failed modules
    Python 2.7.5+ (/usr/bin/python2.7)
    aubio._aubio
    Generation of skeletons for the modules above will be tried again when the modules are updated or a new version of generator is available.

    fixed
    updatedb
    locate libaubio.so
    pushd /usr/lib
    ln -s /usr/local/lib/libaubio.so.4 .

How do I install aubio on Ubuntu?
    Install packages failed: Error occurred when installing package aubio.

    The following command was executed:

    /home/dalem/Downloads/pycharm-community-3.4.1/helpers/packaging_tool.py install --build-dir /tmp/pycharm-packaging8895706410790923047.tmp aubio

    The error output of the command:

    Downloading/unpacking aubio
      Could not find any downloads that satisfy the requirement aubio
    Cleaning up...
    No distributions at all found for aubio
    Storing complete log in /root/.pip/pip.log

    fixed
    Follow http://aubio.org/download then http://aubio.org/installation
    python2?



Sa 20 Sep 2014 4:15 PM CST
StandardError: error creating object
    /usr/bin/python2.7 /home/dalem/PycharmProjects/elapsedbeats/aubiocut.py drum_Larry_Youngs_Fuel_-_Sticky_Wicket.ogg
    Unable to import Numpy array from aubio module (error -1)
    AUBIO ERROR: source_wavread: could not find RIFF header in drum_Larry_Youngs_Fuel_-_Sticky_Wicket.ogg
    AUBIO ERROR: source: failed creating aubio source with drum_Larry_Youngs_Fuel_-_Sticky_Wicket.ogg at samplerate 0 with hop_size 256
    Traceback (most recent call last):
      File "/home/dalem/PycharmProjects/elapsedbeats/aubiocut.py", line 152, in <module>
        s = source(source_file, samplerate, hopsize)
    StandardError: error creating object

    Same with keyboard_Cold_Blood_-_Baby_I_Love_You.ogg
    Same with bass_Nights_Creatures_-_Thats_the_night.ogg
    Same with Fr-grenouille.ogg

    Yet the website http://aubio.org/news works fine with those audio files.
    I created this issue https://github.com/piem/aubio/issues/13

    Second meeting at Panara Bread Thu 11 Sep 2014 10 AM CST, Devi, Nihar, Dale.
    Devi - is it doable.
    Nihar - 2 use cases; demo show it Elapsed Beats (EB) use.

    try python2 at install? Nope, bubbles gets to the same failure.
    python2 to run the code gets past that error and gets (or something like it):

        /usr/bin/python3m /home/dalem/Downloads/pycharm-community-3.4.1/helpers/pydev/pydevd.py --multiproc --client 127.0.0.1 --port 55517 --file /home/dalem/PycharmProjects/elapsedbeats/aubiocut.py Fr-grenouille.ogg
        Connected to pydev debugger (build 135.1057)
        pydev debugger: process 2181 is connecting

        Traceback (most recent call last):
          File "/home/dalem/Downloads/pycharm-community-3.4.1/helpers/pydev/pydevd.py", line 1733, in <module>
            debugger.run(setup['file'], None, None)
        File "/home/dalem/Downloads/pycharm-community-3.4.1/helpers/pydev/pydevd.py", line 1226, in run
            pydev_imports.execfile(file, globals, locals)  # execute the script
        File "/home/dalem/Downloads/pycharm-community-3.4.1/helpers/pydev/_pydev_execfile.py", line 38, in execfile
            exec(compile(contents+"\n", file, 'exec'), glob, loc) #execute the script
        File "/home/dalem/PycharmProjects/elapsedbeats/aubiocut.py", line 138
            print "no file name given\n", usage
                               ^
        SyntaxError: invalid syntax

        Trying suggestion from aubio author to install but am still having problems.
        Perhaps these items will install easier on newer Ubuntu. Starting from LAMP
        VM for Aubio VM Ubuntu 14.04 LTS.

        apt-get install aubio-tools libaubio-dev libaubio-doc

        /usr/bin/python2.7 /home/dalem/PycharmProjects/elapsedbeats/aubiocut.py Fr-grenouille.ogg
        0.0000
        0.2458
        0.3513
        0.4642
        0.5787
        0.7259
        found 6 timestamps in Fr-grenouille.ogg (total 1.37s at 44000Hz)

        YEA!
